--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>TodoList</title>
   </head>
   <body>
     <div id="root"></div>
